--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,5 @@
 PORT=3000
 JWT_SECRET=sua-chave-aqui
+# Chave para criptografar os dados em disco (base64, 32 bytes -> AES-256)
+# Gere com: node -e "console.log(require('crypto').randomBytes(32).toString('base64'))"
+DATA_ENCRYPTION_KEY=
